test_regress/t/t_assert_seq_event_unsup.out
%Error-UNSUPPORTED: t/t_assert_seq_event_unsup.v:18:5: Unsupported: non-edge clocking event on a sequence; use an edge such as @(posedge clk)
                                                     : ... note: In instance 't'
   18 |     @(g) a ##1 b;
      |     ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_seq_event_unsup.v:28:30: Unsupported: sequence used as an event control with a sequence operand of 'or'
   28 |     @(posedge clk) (a ##1 b) or (a ##2 b);
      |                              ^~
%Error-UNSUPPORTED: t/t_assert_seq_event_unsup.v:21:12: Unsupported: sequence referenced outside assertion property
                                                      : ... note: In instance 't'
   21 |   sequence s_ref;
      |            ^~~~~
%Error: Exiting due to
